--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Joseph John</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">home</a>
+            <a href="wwr">Rafting website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Joseph John</h1>
+        <img src="images/Josephjohn..jpg" alt="Hello, my name is Joseph John" width="200">
+        <p>Hello! My name is Joseph and i am excellent in leadership skills and communication skills.In my free time i
+            love to hiking and watching movies.actually im big fan of basketball and football.</p>
+    </main>
+    <footer>
+        <p>©2025 🍕Joseph john 🍕Tanzania</p>
+    </footer>
+
 </body>
+
 </html>
