--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joseph John</title>
+    <title>Joseph John WDD130</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="#">home</a>
-            <a href="wwr">Rafting website</a>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting website</a>
         </nav>
     </header>
     <main>
-        <h1>Joseph John</h1>
-        <img src="images/Josephjohn..jpg" alt="Hello, my name is Joseph John" width="200">
+        <h1>Joseph John WDD130</h1>
+        <img src="week01/images/profile.jpg" alt="Hello, my name is Joseph John" width="200">
         <p>Hello! My name is Joseph and i am excellent in leadership skills and communication skills.In my free time i
             love to hiking and watching movies.actually im big fan of basketball and football.</p>
     </main>
