--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>WDD 130</h1>
-        <img src="week01/images/profile.jpg" alt="Hello, my name is Joseph John" width="200">
+        <img src="images/images/profile.jpg" alt="Hello, my name is Joseph John" width="200">
         <p>Hello! My name is Joseph and i am excellent in leadership skills and communication skills.In my free time i
             love to hiking and watching movies.actually im big fan of basketball and football.</p>
     </main>
