add index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | Joseph Samwel John </title>
+    <meta name="description"
+        content="Hello! my name is joseph and im currently doing web development why or what is the purpose of this page is to enhance skills and ability to design and make proffessional website">
+    <meta name="author" content="joseph john">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -16,10 +20,23 @@
     </header>
     <main>
         <h1>WDD 130</h1>
-        <img src="week01/images/profile.jpg" alt="Hello, my name is Joseph John" width="200">
-        <p>Hello! My name is Joseph and i am excellent in leadership skills and communication skills.In my free time i
+        <img src="images/profile.jpg" alt="Hello, my name is Joseph John" width="200">
+        <p>Hello! My name is Joseph and i am excellent in leadership skills and communication skills.In my free time
+            i
             love to hiking and watching movies.actually im big fan of basketball and football.</p>
     </main>
+    <aside>
+        <h2>Tanzania</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Coat_of_arms_of_Tanzania.svg/250px-Coat_of_arms_of_Tanzania.svg.png"
+            alt="Tanzania coat of arms">
+        <p>Tanzania is a country in East Africa within the African Great Lakes region. It is bordered by Uganda to
+            the northwest; Kenya to
+            the northeast; the Indian Ocean to the east; Mozambique and Malawi to the south; Zambia to the
+            southwest; and Rwanda,
+            Burundi, and the Democratic Republic of the Congo to the west. According to a 2024 estimate, Tanzania
+            has a population
+            of around 67.5 million, making it the most populous country located entirely south of the equator. </p>
+    </aside>
     <footer>
         <p>©2025 🍕Joseph john 🍕Tanzania</p>
     </footer>
