--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | Joseph Samwel John </title>
-    <meta name="description"
-        content="Hello! my name is joseph and im currently doing web development why or what is the purpose of this page is to enhance skills and ability to design and make proffessional website">
+    <meta name="description" content="Joseph John BYU IDAHO student course WDD130 purpose making home page ">
     <meta name="author" content="joseph john">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
