--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </main>
     <aside>
         <h2>Tanzania</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Coat_of_arms_of_Tanzania.svg/250px-Coat_of_arms_of_Tanzania.svg.png"
-            alt="Tanzania coat of arms">
+        <img src="images/coatofarm.jpg" alt="Tanzania coat of arms">
         <p>Tanzania is a country in East Africa within the African Great Lakes region. It is bordered by Uganda to
             the northwest; Kenya to
             the northeast; the Indian Ocean to the east; Mozambique and Malawi to the south; Zambia to the
