--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,27 +22,29 @@
             </ul>
         </nav>
     </header>
-
-    <!--Hero image-->
-    <section class="hero">
-        <img src="images/rafting-water.jpg" alt="Rafting Adventure">
-        <!--about section-->
-        <div class="about-overlay">
-            <h2>White Water company</h2>
-            <img src="images/happy-client.jpg" alt="Happy client" width="150">
-            <p>Our company is dedicated to providing excellent service and making friendly environment for all
-                our
-                customers.</p>
-        </div>
+    <main>
+        <!--Hero image-->
+        <div class="hero">
+            <img src="images/rafting-water.jpg" alt="Rafting Adventure">
+            <!--about section-->
+            <div class="about-overlay">
+                <h1>White Water company</h1>
+                <article>
+                    <img src="images/happy-client.jpg" alt="Happy client" width="150">
+                    <p>Our company is dedicated to providing excellent service and making friendly environment for all
+                        our
+                        customers.</p>
+                    <article>
+            </div>
+    </main>
+    <section>
+        <h2>History</h2>
+        <p>The White Water company was started in 1975 during the industrial revolution at London England and
+            grew
+            up in USA and
+            its where the company started to be known in many countries,the founder of the company was John
+            martin.</p>
     </section>
-    <h2>History</h2>
-    <p>The White Water company was started in 1975 during the industrial revolution at London England and
-        grew
-        up in USA and
-        its where the company started to be known in many countries,the founder of the company was John
-        martin.
-    </p>
-    </s>
     <section>
         <h2>Adventure Awaits You!</h2>
     </section>
