--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Joseph Samwel John </title>
     <meta name="description" content="Joseph John BYU IDAHO student course WDD130 purpose making home page ">
     <meta name="author" content="joseph john">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <title>About Us and the rafting company name/title>
+        <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
@@ -15,27 +15,37 @@
         <img src="images/water-logo.png" alt="Rafting Site logo">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Trips</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a> href="#">Home</a></li>
+                <li><a> href="#">About Us</a></li>
+                <li><a> href="#">Trips</a></li>
+                <li><a> href="#">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <!--Hero image-->
         <div class="hero">
-            <img src="images/rafting-water.jpg" alt="Rafting Adventure">
-            <!--about section-->
-            <div class="about-overlay">
+            <!--content here-->
+        </div>
+        <img src="images/rafting-water.jpg" alt="Rafting Adventure">
+        <!--about section-->
+        <main>
+            <div class="hero">
                 <h1>White Water company</h1>
-                <article>
-                    <img src="images/happy-client.jpg" alt="Happy client" width="150">
-                    <p>Our company is dedicated to providing excellent service and making friendly environment for all
-                        our
-                        customers.</p>
-                    <article>
+                <!--other content-->
             </div>
+            <!--other main content-->
+        </main>
+        <div class="hero">
+            <article>
+                <!--other content like headings and paragraphs can go here-->
+                <img src="images/happy-client.jpg" alt="Happy client" width="150">
+                <p>Our company is dedicated to providing excellent service and making friendly environment for all
+                    our
+                    customers.</p>
+                <article>
+        </div>\
+
+        <body>
     </main>
     <section>
         <h2>History</h2>
@@ -48,17 +58,19 @@
     <section>
         <h2>Adventure Awaits You!</h2>
     </section>
-    <footer>
-        <p>© 2025 🥽 Excitting Adventure 🥽 Joseph John</p>
-        <div class="socialmedia">
-            <a href="https://facebook.com">
-                <img src="images/facebook.jpg" alt="facebook icon"></a>
-            <a href="https://linkedin.com">
-                <img src="images/linkden.jpg" alt="linkedin icon"></a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.jpg" alt="instagram icon"> </a>
-        </div>
-    </footer>
+    </main>
+</body>
+<footer>
+    <p>© 2025 🥽 Excitting Adventure 🥽 Joseph John</p>
+    <nav class="socialmedia">
+        <a href="https://facebook.com">
+            <img src="images/facebook.jpg" alt="facebook icon"></a>
+        <a href="https://linkedin.com">
+            <img src="images/linkden.jpg" alt="linkedin icon"></a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.jpg" alt="instagram icon"> </a>
+    </nav>
+</footer>
 </body>
 
 </html>
