add about.html and rafting.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,73 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Joseph John BYU IDAHO student course WDD130 purpose making home page ">
-    <meta name="author" content="joseph john">
-    <title>About Us and the rafting company name/title>
-        <link rel="stylesheet" href="styles/rafting.css">
+    <meta name="description"
+        content="Learn about White Water Company, our mission, history, and passion for rafting adventures.">
+    <meta name="author" content="Joseph John">
+    <title>About Us - White Water Company</title>
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <header>
-        <img src="images/water-logo.png" alt="Rafting Site logo">
+        <img src="images/water-logo.png" alt="Rafting Site Logo">
         <nav>
-            <ul>
-                <li><a> href="#">Home</a></li>
-                <li><a> href="#">About Us</a></li>
-                <li><a> href="#">Trips</a></li>
-                <li><a> href="#">Contact Us</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-    <main>
-        <div class="hero">
-            <!--content here-->
-        </div>
-        <img src="images/rafting-water.jpg" alt="Rafting Adventure">
-        <!--about section-->
-        <main>
-            <div class="hero">
-                <h1>White Water company</h1>
-                <!--other content-->
-            </div>
-            <!--other main content-->
-        </main>
-        <div class="hero">
-            <article>
-                <!--other content like headings and paragraphs can go here-->
-                <img src="images/happy-client.jpg" alt="Happy client" width="150">
-                <p>Our company is dedicated to providing excellent service and making friendly environment for all
-                    our
-                    customers.</p>
-                <article>
-        </div>\
 
-        <body>
+    <main>
+        <!-- HERO SECTION -->
+        <div class="hero">
+            <img src="images/rafting-water.jpg" alt="Rafting Adventure">
+            <h1>White Water Company</h1>
+            <article>
+                <img src="images/happy-client.jpg" alt="Happy client enjoying rafting" width="150">
+                <p>
+                    Our company is dedicated to providing excellent service and creating a friendly,
+                    adventurous experience for all our customers. We believe in safety, excitement,
+                    and unforgettable memories.
+                </p>
+            </article>
+        </div>
+
+        <!-- HISTORY SECTION -->
+        <section>
+            <h2>History</h2>
+            <p>
+                White Water Company began in 1975 in London, England, and expanded to the United States,
+                where it gained worldwide recognition. The founder, John Martin, built the company on a
+                passion for adventure and a commitment to quality service.
+            </p>
+        </section>
+
+        <!-- ADVENTURE SECTION -->
+        <section>
+            <h2>Adventure Awaits You!</h2>
+            <!-- images to be added in the next assignment -->
+        </section>
     </main>
-    <section>
-        <h2>History</h2>
-        <p>The White Water company was started in 1975 during the industrial revolution at London England and
-            grew
-            up in USA and
-            its where the company started to be known in many countries,the founder of the company was John
-            martin.</p>
-    </section>
-    <section>
-        <h2>Adventure Awaits You!</h2>
-    </section>
-    </main>
-</body>
-<footer>
-    <p>© 2025 🥽 Excitting Adventure 🥽 Joseph John</p>
-    <nav class="socialmedia">
-        <a href="https://facebook.com">
-            <img src="images/facebook.jpg" alt="facebook icon"></a>
-        <a href="https://linkedin.com">
-            <img src="images/linkden.jpg" alt="linkedin icon"></a>
-        <a href="https://instagram.com">
-            <img src="images/instagram.jpg" alt="instagram icon"> </a>
-    </nav>
-</footer>
+
+    <footer>
+        <p>© 2025 🥽 White Water Company 🥽 Joseph John</p>
+        <nav class="socialmedia">
+            <a href="https://facebook.com">
+                <img src="images/facebook.jpg" alt="Facebook icon">
+            </a>
+            <a href="https://linkedin.com">
+                <img src="images/linkden.jpg" alt="LinkedIn icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.jpg" alt="Instagram icon">
+            </a>
+        </nav>
+    </footer>
+
 </body>
 
 </html>
