add about.html, rafting.css and wwr file

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Learn about White Water Company, our mission, history, and passion for rafting adventures.">
     <meta name="author" content="Joseph John">
-    <title>About Us - White Water Company</title>
+    <title>About Us | [White Water Company]</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
