add rafting.css and about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,13 +7,13 @@
     <meta name="description"
         content="Learn about White Water Company, our mission, history, and passion for rafting adventures.">
     <meta name="author" content="Joseph John">
-    <title>About Us | [White Water Company]</title>
+    <title>About Us | White Water Company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <header>
-        <img src="images/water-logo.png" alt="Rafting Site Logo">
+        <img src="images/water-logo.png" alt="Rafting Site Logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+
         <!-- HERO SECTION -->
         <div class="hero">
             <img src="images/rafting-water.jpg" alt="Rafting Adventure">
@@ -38,24 +39,60 @@
         </div>
 
         <!-- HISTORY SECTION -->
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>
-                White Water Company began in 1975 in London, England, and expanded to the United States,
-                where it gained worldwide recognition. The founder, John Martin, built the company on a
-                passion for adventure and a commitment to quality service.
-            </p>
+
+            <div class="history-layout">
+                <p>
+                    White Water Company began in 1975 in London, England, and expanded to the United States,
+                    where it gained worldwide recognition. The founder, John Martin, built the company on a
+                    passion for adventure and a commitment to quality service.
+                </p>
+
+                <img src="images/history.jpg" alt="Company History Image">
+            </div>
         </section>
 
-        <!-- ADVENTURE SECTION -->
-        <section>
+        <!-- ADVENTURES SECTION -->
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <!-- images to be added in the next assignment -->
+
+            <div class="adventure-gallery">
+
+                <figure>
+                    <img src="images/titan'sflow.jpg" alt="Titan's Flow">
+                    <figcaption>Titan's Flow</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/bigwildduck.jpg" alt="Big Wild Duck">
+                    <figcaption>Big Wild Duck</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/daytrips.jpg" alt="Day Trips">
+                    <figcaption>Day Trips</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/riverflow.jpg" alt="River flow">
+                    <figcaption>River Run Rapids</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/wildcanoy.jpg" alt="Wild Canyon Ride">
+                    <figcaption>Wild Canyon Ride</figcaption>
+                </figure>
+
+            </div>
         </section>
+
     </main>
 
+    <!-- FOOTER -->
     <footer>
         <p>© 2025 🥽 White Water Company 🥽 Joseph John</p>
+
         <nav class="socialmedia">
             <a href="https://facebook.com">
                 <img src="images/facebook.jpg" alt="Facebook icon">
