Add about.html and rafting.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -60,7 +60,7 @@
             <div class="adventure-gallery">
 
                 <figure>
-                    <img src="images/titanflow.jpg" alt="Titan's Flow">
+                    <img src="images/titansflow.jpg" alt="Titan's Flow">
                     <figcaption>Titan's Flow</figcaption>
                 </figure>
 
