--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Contact White Water Company for inquiries, reservations, or support. Get in touch by phone, email, or our online message form.">
+    <meta name="description" content="Contact White Water Company for questions, reservations, or suggestions.">
     <meta name="author" content="Joseph John">
     <title>Contact Us | White Water Company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header>
         <img src="images/water-logo.png" alt="Rafting Site Logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="contact.html" class="active">Contact Us</a>
         </nav>
     </header>
 
@@ -26,105 +27,118 @@
 
         <h1>Contact Us</h1>
 
-        <!-- COMPANY INFORMATION -->
+        <!-- COMPANY INFO SECTION -->
         <section class="company-info">
+
             <h2>Our Company Information</h2>
 
-            <p><strong>Address:</strong> 123 River Street, Rapids City, USA</p>
-            <p><strong>Phone:</strong> +1 (800) 555-RAFT</p>
-            <p><strong>Email:</strong> info@whitewatercompany.com</p>
+            <div class="info-grid">
 
-            <!-- GOOGLE MAP -->
-            <div class="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509389!2d144.95373631531685!3d-37.81627927975171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzfCsDQ4JzU4LjYiUyAxNDTCsDU3JzE0LjQiRQ!5e0!3m2!1sen!2sus!4v1610149123456"
-                    allowfullscreen="" loading="lazy">
-                </iframe>
+                <div class="contact-details">
+                    <p><strong>Address:</strong><br>123 River Street, Arusha, Tanzania</p>
+
+                    <p><strong>Phone:</strong><br>
+                        +255 750 123 456<br>
+                        +255 689 987 654
+                    </p>
+
+                    <p><strong>Email:</strong><br>
+                        info@whitewatercompany.com
+                    </p>
+                </div>
+
+                <!-- GOOGLE MAP -->
+                <div class="map-box">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15952.548791217144!2d36.680555!3d-3.386925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x18371dfb78435f33%3A0x78a7e76b2c4b32cf!2sArusha!5e0!3m2!1sen!2stz!4v1700000000000"
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+
             </div>
         </section>
 
-        <!-- EMPLOYEE PROFILES -->
+        <!-- EMPLOYEES SECTION -->
         <section class="employees">
             <h2>Meet Our Team</h2>
 
             <div class="employee-gallery">
 
                 <figure>
-                    <img src="images/founder.jpg" alt="Employee 1">
-                    <figcaption>John Joseph – Founder & CEO</figcaption>
+                    <img src="images/founder.jpg" alt="Lead Guide">
+                    <figcaption>John Martin – Lead Guide</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/leadguide.jpg" alt="Employee 2">
-                    <figcaption>Baraka shadrack – Lead Guide</figcaption>
+                    <img src="images/leadguide.jpg" alt="Safety Officer">
+                    <figcaption>Joseph James – Safety Officer</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/safestspeacialist.jpg" alt="Employee 3">
-                    <figcaption>japhet claytone – Safety Specialist</figcaption>
+                    <img src="images/safestspeacialist.jpg" alt="Reservations Manager">
+                    <figcaption>Michael Brown – Reservations Manager</figcaption>
                 </figure>
 
             </div>
         </section>
 
-        <!-- CONTACT FORM -->
+        <!-- CONTACT FORM SECTION -->
         <section class="contact-form">
+
             <h2>Send Us a Message</h2>
 
+
             <form>
+                <label for="fullname">Full Name</label>
+                <input type="text" id="fullname" name="fullname" required>
 
-                <label for="name">Full Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email Address:</label>
+                <label for="email">Email Address</label>
                 <input type="email" id="email" name="email" required>
 
                 <p><strong>Purpose of Message:</strong></p>
 
-                <label>
-                    <input type="radio" name="purpose" value="general" required>
+                <!-- RADIO 1 -->
+                <label for="purpose-general">
+                    <input type="radio" id="purpose-general" name="purpose" value="General Inquiry" required>
                     General Inquiry
-                </label>
+                </label><br>
 
-                <label>
-                    <input type="radio" name="purpose" value="reservation">
+                <!-- RADIO 2 -->
+                <label for="purpose-reservation">
+                    <input type="radio" id="purpose-reservation" name="purpose" value="Reservation Question">
                     Reservation Question
-                </label>
+                </label><br>
 
-                <label>
-                    <input type="radio" name="purpose" value="website">
+                <!-- RADIO 3 -->
+                <label for="purpose-suggestion">
+                    <input type="radio" id="purpose-suggestion" name="purpose" value="Website Suggestion">
                     Website Suggestion
                 </label>
 
-                <label for="message">Message:</label>
+                <label for="message"><br><br>Your Message</label>
                 <textarea id="message" name="message" rows="5" required></textarea>
 
-                <label>
-                    <input type="checkbox" name="subscribe">
+                <!-- CHECKBOX -->
+                <label for="subscribe" class="checkbox">
+                    <input type="checkbox" id="subscribe" name="subscribe">
                     Please subscribe me to the monthly newsletter
                 </label>
 
-                <button type="submit">Send Message</button>
-
+                <button type="submit" class="submit-btn">Send Message</button>
             </form>
+
         </section>
 
     </main>
 
     <!-- FOOTER -->
     <footer>
-        <p>© 2025 🎐 White Water Company 🎐 Joseph John</p>
+        <p>© 2025 🥽 White Water Company 🥽 Joseph John</p>
 
         <nav class="socialmedia">
-            <a href="https://facebook.com">
-                <img src="images/facebook.jpg" alt="Facebook icon">
-            </a>
-            <a href="https://linkedin.com">
-                <img src="images/linkden.jpg" alt="LinkedIn icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.jpg" alt="Instagram icon">
-            </a>
+            <a href="https://facebook.com"><img src="images/facebook.jpg" alt="Facebook icon"></a>
+            <a href="https://linkedin.com"><img src="images/linkden.jpg" alt="LinkedIn icon"></a>
+            <a href="https://instagram.com"><img src="images/instagram.jpg" alt="Instagram icon"></a>
         </nav>
     </footer>
 
