--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </main>
     <aside>
         <h2>Tanzania</h2>
-        <img src="images/coatofarm.jpg" alt="Tanzania coat of arms">
+        <img src="images/coatofarm.jpg" alt="Tanzania coat of arms" width="200">
         <p>Tanzania is a country in East Africa within the African Great Lakes region. It is bordered by Uganda to
             the northwest; Kenya to
             the northeast; the Indian Ocean to the east; Mozambique and Malawi to the south; Zambia to the
